--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de KM - GPS</title>
+    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/twbs/icons/main/icons/car-fill.svg">
+    <link rel="apple-touch-icon" sizes="512x512" href="https://raw.githubusercontent.com/twbs/icons/main/icons/car-fill.svg">
+    <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <style>
         * {
